# AA-Sidechain-Perturbation

./: README.md  examples.ipynb  pyproject.toml
src/aaperturb/: constants.py  perturbation.py  rdgraphs.py
